# simple-analyzer

./: dune-project  simple-analyzer.opam
lib/: dune  interval.ml  lexer.mll  lia.ml  parser.mly  printer.ml  semantics.ml  syntax.ml
test/: ex1.l  ex2.l  ex3.l  ex4.l  ex5.l
